--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "html-webpack-plugin": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "styled-components": "^5.3.0"
   },
   "standard": {
