--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "wepack-cli": "^0.0.1-security"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.20",
+    "graphql": "^15.5.1",
     "html-webpack-plugin": "^5.3.2",
     "intersection-observer": "^0.12.0",
     "react": "^17.0.2",
