--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
+    "@reach/router": "^1.3.4",
     "graphql": "^15.5.1",
     "html-webpack-plugin": "^5.3.2",
     "intersection-observer": "^0.12.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-icons": "^4.2.0",
     "styled-components": "^5.3.0"
   },
@@ -27,7 +28,7 @@
   },
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve",
+    "dev": "webpack serve --history-api-fallback",
     "lint": "standard",
     "lint-fix": "standard --fix"
   },
