--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "intersection-observer": "^0.12.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "styled-components": "^5.3.0"
   },
