--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
-    "wepack-cli": "^0.0.1-security"
+    "webpack-pwa-manifest": "^4.3.0",
+    "wepack-cli": "^0.0.1-security",
+    "workbox-webpack-plugin": "^6.1.5"
   },
   "dependencies": {
     "@apollo/client": "^3.3.20",
