--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "cypress": "^7.6.0",
     "prop-types": "^15.7.2",
     "standard": "^16.0.3",
     "webpack": "^5.40.0",
@@ -35,7 +36,8 @@
     "dev": "webpack serve --history-api-fallback",
     "lint": "standard",
     "lint-fix": "standard --fix",
-    "serve:dev": "webpack --mode='development' && npx serve dist -s"
+    "serve:dev": "webpack --mode='development' && npx serve dist -s",
+    "test": "cypress open"
   },
   "eslintConfig": {
     "extends": [
